# kfu-informatics-course

./: .gitignore  CMakeLists.txt  README.md
3_semester/array_list_Iterator/: ArrayList.h  Iterator.h  main.cpp
3_semester/big_int/: BigInt.cpp  BigInt.h  main.cpp
3_semester/boolean/: Boolean.cpp  Boolean.h  main.cpp
3_semester/complex_number/: ComplexNumber.cpp  ComplexNumber.h  main.cpp
3_semester/exam/: BoolMatrix.h  dynamic_array.h  main.cpp
3_semester/heap/: Heap.h  IHeap.h  MinHeap.h  main.cpp
3_semester/linked_list/: Iterator.h  LinkedList.h  Node.h  SorterLinkedList.h  main.cpp
3_semester/matrix/: Matrix.cpp  Matrix.h  input.txt  main.cpp  output.txt
3_semester/maze/: Maze.cpp  Maze.h  Stack.h  input.txt  main.cpp  output.txt  shared.h
3_semester/music_shop/: Accordion.h  Clarinet.h  Drum.h  Guitar.h  Instrument.cpp  Instrument.h  Piano.h  Saxophone.h  Trumpet.h  Violin.h  Xylophone.h  main.cpp
3_semester/my_string/: MyString.cpp  MyString.h  MyStringIdentifier.cpp  MyStringIdentifier.h  main.cpp
3_semester/parabola/: Parabola.cpp  Parabola.h  main.cpp
3_semester/rational_number/: RationalNumber.cpp  RationalNumber.h  main.cpp
3_semester/resistor/: Resistor.cpp  Resistor.h  main.cpp
3_semester/sea_battle/: game.cpp  game.h  gameconfigurations.cpp  gameconfigurations.h  main.cpp  mainwindow.cpp  mainwindow.h  sea_battle.drawio  sea_battle.pro  ship.cpp  ship.h  shipsgrid.cpp  shipsgrid.h
3_semester/semester_task_2/: Polynomial.h  main.cpp
3_semester/semester_task_2/src/: Exponent.h  Interactive.h  Polynomial.h
3_semester/semester_task_2/test/: TestExponent.h  TestPolynomial.h
3_semester/shapes/: Circle.h  Rectangle.h  Shape.h  Triangle.h  main.cpp  utils.h
3_semester/stl_tasks/: bus_routes.h  input.txt  main.cpp  output.txt  poples_queue.h  synonyms.h
3_semester/straight_line/: StraightLine.cpp  StraightLine.h  main.cpp
3_semester/syntactic_analysis/: List.cpp  List.h  Logger.cpp  Logger.h  Stack.cpp  Stack.h  SyntacticAnalyzer.cpp  SyntacticAnalyzer.h  input1.txt  input2.txt  input3.txt  input4.txt  main.cpp  sharedModule.h  utils.cpp  utils.h
3_semester/university_grades_control/: GradeBook.cpp  GradeBook.h  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp  sharedModule.h  university_grades_auto.drawio  utils.cpp  utils.h
3_semester/vector/: main.cpp  vector.h
3_semester/vector3D/: Point3D.cpp  Point3D.h  Vector3D.cpp  Vector3D.h  main.cpp
4_semester/assembly/: Makefile  arr_sum.asm  bitwise_shift.asm  change_momory_value.asm  factorial.asm  files.asm  hello.asm  input.asm  loop.asm  macro.asm  max.asm  memory_management  memory_management.asm  multiple_initialization.asm  procedure.asm  stars.asm  sum.asm
4_semester/latex_math/: README.md  main.tex
4_semester/latex_presentation/: README.md  main.tex
4_semester/tasks/2.2/: 1.asm  2.asm  3.asm  Makefile  main
4_semester/tasks/8.9/: Makefile  main  main.asm
4_semester/tasks/9.2/: main.asm
