cmake_minimum_required(VERSION 3.20)
project(informatics)

set(CMAKE_CXX_STANDARD 17)


add_executable(
        straight_line
        3_semester/straight_line/main.cpp
        3_semester/straight_line/StraightLine.cpp
        3_semester/straight_line/StraightLine.h
)
add_executable(
        rational_number
        3_semester/rational_number/main.cpp
        3_semester/rational_number/RationalNumber.cpp
        3_semester/rational_number/RationalNumber.h
)
add_executable(
        complex_number
        3_semester/complex_number/main.cpp
        3_semester/complex_number/ComplexNumber.cpp
        3_semester/complex_number/ComplexNumber.h
)
add_executable(
        parabola
        3_semester/parabola/main.cpp
        3_semester/parabola/Parabola.cpp
        3_semester/parabola/Parabola.h
)
add_executable(
        resistor
        3_semester/resistor/main.cpp
        3_semester/resistor/Resistor.cpp
        3_semester/resistor/Resistor.h
)
add_executable(
        vector3D
        3_semester/vector3D/main.cpp
        3_semester/vector3D/Vector3D.cpp
        3_semester/vector3D/Vector3D.h
        3_semester/vector3D/Point3D.cpp
        3_semester/vector3D/Point3D.h
)
add_executable(
        boolean
        3_semester/boolean/main.cpp
        3_semester/boolean/Boolean.cpp
        3_semester/boolean/Boolean.h
)
add_executable(
        university_grades_control
        3_semester/university_grades_control/main.cpp
        3_semester/university_grades_control/sharedModule.h
        3_semester/university_grades_control/Person.cpp
        3_semester/university_grades_control/Person.h
        3_semester/university_grades_control/Teacher.cpp
        3_semester/university_grades_control/Teacher.h
        3_semester/university_grades_control/Student.cpp
        3_semester/university_grades_control/Student.h
        3_semester/university_grades_control/utils.h
        3_semester/university_grades_control/utils.cpp
        3_semester/university_grades_control/GradeBook.h
        3_semester/university_grades_control/GradeBook.cpp
)
add_executable(
        syntactic_analysis
        3_semester/syntactic_analysis/main.cpp
        3_semester/syntactic_analysis/SyntacticAnalyzer.h
        3_semester/syntactic_analysis/SyntacticAnalyzer.cpp
        3_semester/syntactic_analysis/sharedModule.h
        3_semester/syntactic_analysis/utils.h
        3_semester/syntactic_analysis/utils.cpp
        3_semester/syntactic_analysis/Stack.h
        3_semester/syntactic_analysis/Stack.cpp
        3_semester/syntactic_analysis/List.h
        3_semester/syntactic_analysis/List.cpp
        3_semester/syntactic_analysis/Logger.h
        3_semester/syntactic_analysis/Logger.cpp
)